Card component HTML & style

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,13 +1,21 @@
-.img-wrapper{
-    margin-top: 30px;
+.hero{
+    .img-wrapper{
+        margin: remify(30px) 0 1rem;
+        text-align: center;
+    
+        .hero-img{
+            max-width: 400px;
+        }
+    }
+    
+    .title{
+        font-size: remify(36px);
+        font-weight: 600;
+    }
+    
+    .description{
+        font-size: 1rem;
+        font-weight: 300;
+    }
 }
 
-.title{
-    font-size: 36px; // remify!!
-    font-weight: 600;
-}
-
-.description{
-    font-size: 16px; // remify!!
-    font-weight: 300;
-}
