--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -30,5 +30,9 @@ div,
 main,
 nav,
 footer{
-    // border: 1px solid blueviolet;
+    border: 1px solid blueviolet;
+}
+
+.experiences-wrapper{
+    flex-wrap: nowrap;
 }
