--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,7 +1,9 @@
 .hero{
     .img-wrapper{
+        display: flex;
+        justify-content: center;
         margin: remify(30px) 0 1rem;
-        text-align: center;
+        // text-align: center;
     
         .hero-img{
             max-width: 400px;
